--- a/css/styles.css
+++ b/css/styles.css
@@ -753,7 +753,8 @@ img {
   height: 50px;
   width: 358px;
   padding: 15px 16px;
-  color: var(--secondary-background-color);
+  color: var(--second-background-color);
+  outline: none;
 }
 .footer-input::placeholder {
   font-weight: 400;
@@ -1136,13 +1137,15 @@ img {
   padding: 12px 16px;
   min-height: 120px;
   outline: none;
+  transition: border var(--mainpropertyofcubic-timeduration) box-shadow
+    var(--mainpropertyofcubic-timeduration);
 }
+
 .order-form-textarea:focus {
   border: 1px solid var(--accent-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-
 /* КІНЕЦЬ ТЕКСТОВОГО ПОЛЯ ФОРМИ */
 
 /* ПЛЕЙСХОЛДЕР */
