--- a/sass/main.css
+++ b/sass/main.css
@@ -1,5 +1,1 @@
-body {
-  background-color: aqua;
-  color: aquamarine;
-}
-/*# sourceMappingURL=main.css.map */
+/* No CSS *//*# sourceMappingURL=main.css.map */
